// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`flex > 0 1`] = `
<div
  className="border_box WRAPPER_CLASSNAME 
      flex-10
      
      
      
       
      "
  onClick={null}
  style={Object {}}
>
  <div
    className="CONTENT_CLASSNAME"
  >
    <div
      className="layout-align-space-between-center flex-100 layout-row"
    >
      <p
        className="layout-align-start-center flex layout-row title_grey"
      >
        TITLE
      </p>
    </div>
    CONTENT
  </div>
</div>
`;

exports[`flexGtLg > 0 1`] = `
<div
  className="border_box WRAPPER_CLASSNAME 
      flex
      flex-gt-lg-10
      
      
       
      "
  onClick={null}
  style={Object {}}
>
  <div
    className="CONTENT_CLASSNAME"
  >
    <div
      className="layout-align-space-between-center flex-100 layout-row"
    >
      <p
        className="layout-align-start-center flex layout-row title_grey"
      >
        TITLE
      </p>
    </div>
    CONTENT
  </div>
</div>
`;

exports[`flexMd > 0 1`] = `
<div
  className="border_box WRAPPER_CLASSNAME 
      flex
      
      flex-md-10
      
       
      "
  onClick={null}
  style={Object {}}
>
  <div
    className="CONTENT_CLASSNAME"
  >
    <div
      className="layout-align-space-between-center flex-100 layout-row"
    >
      <p
        className="layout-align-start-center flex layout-row title_grey"
      >
        TITLE
      </p>
    </div>
    CONTENT
  </div>
</div>
`;

exports[`fullWidth is true 1`] = `
<div
  className="border_box WRAPPER_CLASSNAME 
      flex
      
      
      
       
      fullWidth"
  onClick={null}
  style={Object {}}
>
  <div
    className="CONTENT_CLASSNAME"
  >
    <div
      className="layout-align-space-between-center flex-100 layout-row"
    >
      <p
        className="layout-align-start-center flex layout-row title_grey"
      >
        TITLE
      </p>
    </div>
    CONTENT
  </div>
</div>
`;

exports[`isBox is true 1`] = `
<div
  className="border_box WRAPPER_CLASSNAME 
      flex
      
      
      
      layout-row flex-sm-100 flex-xs-100 layout-align-center-center 
      "
  onClick={null}
  style={Object {}}
>
  <div
    className="CONTENT_CLASSNAME"
  >
    <div
      className="layout-align-space-between-center flex-100 layout-row"
    >
      <p
        className="layout-align-start-center flex layout-row title_grey"
      >
        TITLE
      </p>
    </div>
    CONTENT
  </div>
</div>
`;

exports[`padding is true 1`] = `
<div
  className="border_box WRAPPER_CLASSNAME 
      flex
      
      
      boxpadding
       
      "
  onClick={null}
  style={Object {}}
>
  <div
    className="CONTENT_CLASSNAME"
  >
    <div
      className="layout-align-space-between-center flex-100 layout-row"
    >
      <p
        className="layout-align-start-center flex layout-row title_grey"
      >
        TITLE
      </p>
    </div>
    CONTENT
  </div>
</div>
`;

exports[`shallow render 1`] = `
<div
  className="border_box WRAPPER_CLASSNAME 
      flex
      
      
      
       
      "
  onClick={null}
  style={Object {}}
>
  <div
    className="CONTENT_CLASSNAME"
  >
    <div
      className="layout-align-space-between-center flex-100 layout-row"
    >
      <p
        className="layout-align-start-center flex layout-row title_grey"
      >
        TITLE
      </p>
    </div>
    CONTENT
  </div>
</div>
`;

exports[`title is falsy 1`] = `
<div
  className="border_box WRAPPER_CLASSNAME 
      flex
      
      
      
       
      "
  onClick={null}
  style={Object {}}
>
  <div
    className="CONTENT_CLASSNAME"
  >
    CONTENT
  </div>
</div>
`;
